--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                         <div class="project-tech">
                             <span class="tech-badge"><i class="fas fa-cube"></i> Laravel</span>
                             <span class="tech-badge"><i class="fab fa-vuejs"></i> Vue.js</span>
-                              <span class="tech-badge"><i class="fab fa-vuejs"></i> Flutter</span>
+                              <span class="tech-badge"><i class="fas fa-mobile-alt"></i> Flutter</span>
                             <span class="tech-badge"><i class="fas fa-database"></i> MySQL</span>
                         </div>
                         <a href="http://easy-market.xo.je/" class="project-btn" data-translate="project_btn">Voir le Projet</a>
@@ -313,7 +313,7 @@
                         <h3 data-translate="project3_title">Hello Baby !</h3>
                         <p data-translate="project3_description">Application de Suivi de grossesse et de cycle menstruel</p>
                         <div class="project-tech">
-                            <span class="tech-badge"><i class="fab fa-flutter"></i> Flutter</span>
+                            <span class="tech-badge"><i class="fas fa-mobile-alt"></i> Flutter</span>
                             <span class="tech-badge"><i class="fab fa-vuejs"></i> Vuejs</span>
                         </div>
                         <a href="https://rachad-alabi-adekambi.github.io/hello-baby/" class="project-btn" data-translate="project_btn">Voir le Projet</a>
