--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                             <span class="tech-badge"><i class="fab fa-vuejs"></i> Vue.js</span>
                             <span class="tech-badge"><i class="fab fa-php"></i> PHP</span>
                         </div>
-                        <a href="https://ampay.xo.je/" class="project-btn" data-translate="project_btn">Voir le Projet</a>
+                        <a href="https://am-pay.xo.je/" class="project-btn" data-translate="project_btn">Voir le Projet</a>
                     </div>
                 </div>
 
