--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
             </div>
 
             <div class="projects-grid" id="projectsGrid">
+                <!--
                 <div class="project-card">
                     <div class="project-image">
                         <img src="public/easy_market.PNG" alt="E-commerce Store">
@@ -287,7 +288,7 @@
                         </div>
                         <a href="http://easy-market.xo.je/" class="project-btn" data-translate="project_btn">Voir le Projet</a>
                     </div>
-                </div>
+                </div>-->
 
                 <div class="project-card">
                     <div class="project-image">
