--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" type="image/x-icon" href="public/logo.PNG">
-
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <meta name="description" content="Portfolio de Rachad, développeur web full-stack spécialisé en Laravel, Vue.js, Flutter et WordPress. Projets, compétences, expériences et services disponibles pour missions freelance et collaborations." />
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+
 </head>
 <body>
     <!-- Header -->
@@ -62,10 +65,10 @@
                     <span data-translate="hero_title">Rachad Alabi ADEKAMBI</span>
                 </h1>
                 <h2 class="hero-subtitle" data-translate="hero_subtitle">
-                    Full-Stack Developer & Consultant
+                    Développeur Full-Stack  & Consultant
                 </h2>
                 <p class="hero-description" data-translate="hero_description">
-                    Aidez votre entreprise à créer des solutions web efficaces et évolutives
+                    Aidez votre entreprise à créer des solutions web & mobiles efficaces et évolutives
                 </p>
                 <a href="#contact" class="cta-btn" data-translate="hero_cta">
                     Réserver une consultation gratuite
